unpackaged/objects/wb_CarInsurance__c.object
<CustomObject>
    <description>WellBe Car related Insurance Contract</description>
    <fields>
        <fullName>AcctPIC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>担当（計上）</label>
        <referenceTo>Shimei__c</referenceTo>
        <relationshipLabel>自動車関連保険契約</relationshipLabel>
        <relationshipName>StaffCarInsurance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AffiliationDistrict__c</fullName>
        <label>所属地区</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent__c</fullName>
        <label>契約店</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute__c</fullName>
        <label>属性</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>会員企業</fullName>
                </value>
                <value>
                    <fullName>非会員企業</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CommissionCurrency__c</fullName>
        <label>手数料通貨</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>契約会社</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>自動車関連保険契約</relationshipLabel>
        <relationshipName>CompanyCarInsurance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContractCountry__c</fullName>
        <label>契約国</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractDate__c</fullName>
        <label>契約日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ContractDistrict__c</fullName>
        <label>契約地区</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreriousContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>前の契約番号</label>
        <referenceTo>wb_CarInsurance__c</referenceTo>
        <relationshipLabel>自動車関連保険契約</relationshipLabel>
        <relationshipName>ChildContract</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>状況</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>未確定</fullName>
                </value>
                <value>
                    <fullName>確定</fullName>
                </value>
                <value>
                    <fullName>キャンセル</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>f_ContractCompCode__c</fullName>
        <formula>ContractCompany__r.CompanyCd__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>契約会社コード</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>f_ContractCompEigyoTanto__c</fullName>
        <formula>ContractCompany__r.EigyoTanto__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>契約会社WB営業担当</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>f_ContractCompFax__c</fullName>
        <formula>ContractCompany__r.Fax</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>契約会社FAX</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>f_ContractCompOfficeAdd__c</fullName>
        <formula>ContractCompany__r.OfficeAdd__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>契約会社住所</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>f_ContractCompOfficePostcd__c</fullName>
        <formula>ContractCompany__r.OfficePostcd__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>契約会社郵便番号</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>f_ContractCompOrgMechNo__c</fullName>
        <formula>ContractCompany__r.OrgMechNo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>契約会社組織機構代碼</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>f_ContractCompPhone__c</fullName>
        <formula>ContractCompany__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>契約会社電話</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>f_ContractCompVehicleShimei__c</fullName>
        <formula>ContractCompany__r.VehicleShimei__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>契約会社自動車担当者</label>
        <type>Text</type>
    </fields>
    <label>自動車関連保険契約</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>自動車関連保険契約</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>